# sine-project

./: .gitignore  README.md  main.py  pyproject.toml  sweep_experiments.py
config/: config.yaml
docs/: ARCHITECTURE.md  PLAN.md  PRD.md  PRD_LSTM.md  PRD_MLP.md  PRD_RNN.md  PROMPT_LOG.md  REPORT.md  RESULTS.md  TODO.md
helper/: ai-orchestration3.txt
src/sine_extraction/: __init__.py  __main__.py  app.py  config_loader.py  constants.py  device.py  results.py  seeding.py  types.py
src/sine_extraction/cli/: __init__.py  commands.py  eval_vis.py  main.py
src/sine_extraction/data/: __init__.py  dataset.py  generator.py  splitter.py
src/sine_extraction/evaluation/: __init__.py  metrics.py
src/sine_extraction/models/: base.py  lstm.py  mlp.py  rnn.py
src/sine_extraction/training/: __init__.py  checkpoint_manager.py  losses.py  trainer.py
src/sine_extraction/visualization/: __init__.py  plotter.py
tests/: __init__.py  conftest.py  test_cli.py  test_config_loader.py  test_constants.py  test_dataset.py  test_device.py  test_generator.py  test_integration.py  test_losses.py  test_lstm.py  test_metrics.py  test_mlp.py  test_persistence.py  test_rnn.py  test_seed.py  test_splitter.py  test_trainer.py  test_types.py  test_types_app.py  test_visualization.py
