[project]
name = "najikay-sine-project"
version = "1.0.0"
description = "Sine wave extraction from noisy mixed signals using MLP, RNN, and LSTM models"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Naji Kay" }]
dependencies = [
    "click>=8.1",
    "matplotlib>=3.8",
    "numpy>=1.26,<2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "streamlit>=1.57.0",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sine_extraction --cov-report=term-missing"

[tool.coverage.run]
source = ["sine_extraction"]
branch = true

[tool.coverage.report]
fail_under = 85

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN401", "N803", "N806"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
